--- a/requirements.txt
+++ b/requirements.txt
@@ -107,7 +107,7 @@
 # zlib=1.2.11=h7b6447c_3
 # zstd=1.3.7=h0b5b093_0
 
-cudatoolkit==10.1
+# cudatoolkit==10.1
 numpy==1.18.1
 opencv==3.4.2
 pillow==7.0
@@ -119,4 +119,4 @@ tensorboard==2.1
 matplotlib==3.1.3
 scikit-learn==0.22.1
 pyyaml==5.3.1
-nvidia-apex==0.1
+# nvidia-apex==0.1
