--- a/requirements.txt
+++ b/requirements.txt
@@ -108,13 +108,25 @@
 # zstd=1.3.7=h0b5b093_0
 
 # cudatoolkit==10.1
-numpy
-opencv==3.4.2
-pillow==7.0
-pytorch==1.4.0
-torchvision==0.5
-tensorboard==2.1
-matplotlib==3.1.3
-scikit-learn==0.22.1
-pyyaml==5.3.1
-# nvidia-apex==0.1
+h5py==3.8.0
+huggingface-hub==0.15.1
+lightly==1.4.6
+lightly-utils==0.0.2
+lightning-utilities==0.7.1
+matplotlib==3.7.1
+more-itertools==9.1.0
+numpy==1.24.3
+pandas==1.5.3
+Pillow==9.4.0
+pytorch-lightning==1.9.3
+scikit-image==0.21.0
+scikit-learn==1.2.2
+scipy==1.10.1
+timm==0.6.13
+torch==2.0.1
+torchaudio==2.0.2
+torchmetrics==0.11.2
+torchvision==0.15.2
+tqdm==4.65.0
+urllib3==1.26.15
+tensorboard
