--- a/requirements.txt
+++ b/requirements.txt
@@ -107,7 +107,6 @@
 # zlib=1.2.11=h7b6447c_3
 # zstd=1.3.7=h0b5b093_0
 
-# cudatoolkit==10.1
 h5py==3.8.0
 huggingface-hub==0.15.1
 lightly==1.4.6
@@ -130,3 +129,5 @@ torchvision==0.15.2
 tqdm==4.65.0
 urllib3==1.26.15
 tensorboard
+pyyaml==5.3.1
+
